--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                 </div>
                             </div>
                             <div class="button-group">
-                                <a class="btn btn--md" href="">
+                                <a class="btn-3 btn--md" href="">
                                     <span class="btn__text">Get started with Azure</span>
                                 </a>
                             </div>
@@ -242,7 +242,7 @@
                                         <div class="layout__col">
                                             <div class="section-master__layout-header">
                                                 <div class="block-heading "> 
-                                                    <div class="fg--neutral-highlight block-heading__eyebrow">
+                                                    <div class="fg--neutral-highlight block-heading__eyebrow block-heading--size">
                                                         <div class="token-text">FEATURED NEWS</div>
                                                     </div>
                                                     <div class="block-heading__title">
@@ -1605,7 +1605,7 @@
                         </ul>
         
                     </div>
-                    <div class="questions">
+                    <div class="questions q-2">
                         <h4>Products and pricing</h4>
                         <ul>
                             <li>Products</li>
