--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@
                                                                     <div class="carousel__indicators-item__media">
                                                                         <div class="media media--ratio-21-9">
                                                                             <div class="ocr-img media__asset">
-                                                                                <img src="/Azure_2/Image/unity.avif" alt="">
+                                                                                <img src="Image/unity.avif" alt="">
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -1265,7 +1265,7 @@
                                                                     <div class="carousel__indicators-item__media">
                                                                         <div class="media media--ratio-21-9">
                                                                             <div class="ocr-img media__asset">
-                                                                                <img src="/Azure_2/Image/hei.avif" alt="">
+                                                                                <img src="Image/hei.avif" alt="">
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -1281,7 +1281,7 @@
                                                                 <div class="testimonial-card__media order-md-1 col-6 col-md-6 col-lg-12">
                                                                     <div class="media">
                                                                         <div class="ocr-img media__asset">
-                                                                            <img src="/Azure_2/Image/CustomerStories-HP-656x522.avif" alt="">
+                                                                            <img src="Image/CustomerStories-HP-656x522.avif" alt="">
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -1290,7 +1290,7 @@
                                                                         <div class="testimonial-card__content-media">
                                                                             <div class="media">
                                                                                 <div class="ocr-img media__asset">
-                                                                                    <img src="/Azure_2/Image/2nd hp.avif" alt="">
+                                                                                    <img src="Image/2nd hp.avif" alt="">
                                                                                 </div>
                                                                             </div>
                                                                         </div>
